--- a/requirements.txt
+++ b/requirements.txt
@@ -63,6 +63,7 @@ pycparser==2.21
 pygame==2.1.3
 Pygments==2.14.0
 pyrsistent==0.19.3
+pyserial==3.5
 python-dateutil==2.8.2
 python-json-logger==2.0.6
 pywin32==305
@@ -74,7 +75,6 @@ QtPy==2.3.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 Send2Trash==1.8.0
-serial==0.0.97
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.4
